React: Sidebar: Fix height too high

--- a/src/assets/styles/components/main/sidebar.module.scss
+++ b/src/assets/styles/components/main/sidebar.module.scss
@@ -23,10 +23,10 @@
 
     .sidebar_header {
         border-bottom: 1px solid $text-color;
-
-        h2 {
-            margin-bottom: 1rem;
-        }
+        height: 8rem;
+        width: inherit;
+        max-width: inherit;
+        position: fixed;
 
         .sidebar_topbar {
             position: relative;
@@ -37,10 +37,10 @@
         list-style: none;
         padding: 0;
         margin: 0;
-        height: 100%;
-        margin-top: 1rem;
+        height: calc(100% - 9rem);
         padding-left: 1rem;
         overflow-y: auto;
+        margin-top: 9rem;
 
         li {
             margin: 0.5rem;
